# data_feeder

./: Cargo.toml  README.md  config.toml.example
benches/: performance_benchmark.rs  websocket_performance.rs
src/: adaptive_config.rs  concurrency_optimization.rs  cpu_topology.rs  deployment_validation.rs  integration_validation.rs  lib.rs  logging.rs  main.rs  metrics.rs  metrics_server.rs  network_optimization.rs  processing_optimization.rs  profiling.rs  storage_optimization.rs  system_resources.rs  tokio_metrics.rs  zero_copy_serialization.rs
src/api/: actor.rs  exchange.rs  exchange_manager.rs  mod.rs  optimized_parsing.rs  trading_metrics.rs  types.rs
src/api/binance/: klines.rs
src/api/gate_io/: klines.rs  mod.rs  trading.rs
src/common/: constants.rs  database_utils.rs.disabled  error_utils.rs  hybrid_serialization.rs  lmdb_config.rs  mod.rs  object_pool.rs  output_generation_engine.rs  serialization.rs  shared_data.rs  streaming_serialization.rs  tests.rs.disabled
src/health/: mod.rs
src/historical/: actor.rs  error_handling_tests.rs  errors.rs  mod.rs  structs.rs  tests.rs  tests_integration.rs  utils.rs  volume_profile_validator.rs
src/kafka/: actor.rs  errors.rs  mod.rs
src/lmdb/: actor.rs  gap_detector.rs  messages.rs  mod.rs  storage.rs  tests.rs
src/performance/: compiler.rs  mod.rs  production.rs  production_config.rs  resource_management.rs  validation.rs
src/postgres/: actor.rs  errors.rs  mod.rs
src/queue/: db_queue.rs  io_queue.rs  metrics.rs  mod.rs  rate_limiter.rs  task_queue.rs  types.rs  worker_pool.rs
src/technical_analysis/: async_batching.rs  fast_serialization.rs  indicators.rs  mod.rs  rkyv_serialization.rs  simd_math.rs  structs.rs  utils.rs
src/technical_analysis/actors/: indicator.rs  mod.rs  timeframe.rs
src/volume_profile/: actor.rs  actor_extensions.rs  calculator.rs  database.rs  gap_detection.rs  mod.rs  numeric.rs  output_cache.rs  precision.rs  reprocessing.rs  structs.rs  validation.rs  zero_copy_serialization.rs
src/websocket/: actor.rs  connection.rs  mod.rs  optimized_parser.rs  tests.rs  types.rs
src/websocket/binance/: depth.rs  kline.rs  mod.rs  ticker.rs  trade.rs
src/websocket/gate_io/: balances.rs  mod.rs  orders.rs  positions.rs  trades.rs
tests/: e2e_kafka_test.rs  kafka_integration_test.rs
tests/fixtures/: mod.rs
